<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#ffffff" >
		<!-- Header  Starts -->
		<LinearLayout
			android:id="@+id/header"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/background_gradient"
			android:paddingBottom="5dip"
			android:paddingTop="5dip" >
			<!-- Logo Start -->
			<ImageView
			    android:id="@+id/logo_big"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				android:layout_marginLeft="10dip"
				android:contentDescription="@string/loginString"
				android:src="@drawable/logo_big" />
			<!-- Logo Ends -->
		</LinearLayout>
		<!-- Header Ends -->
		<!-- Footer Start -->
		<LinearLayout
			android:id="@+id/footer"
			android:layout_width="fill_parent"
			android:layout_height="90dip"
			android:layout_alignParentBottom="true"
			android:background="@drawable/footer_repeat"
			android:orientation="vertical" >
		</LinearLayout>
		<!-- Footer Ends -->
		<!-- Login Form -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/header"
			android:orientation="vertical"
			android:padding="10dip" >
			<!-- Email Label -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/emailString"
				android:textColor="#372c24" />
			<EditText
				android:id="@+id/username_logIn"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
				android:layout_marginTop="5dip"
				android:inputType="textEmailAddress"
				android:singleLine="true"
				android:text="" />
			<!-- Password Label -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/passwordString"
				android:textColor="#372c24" />
			<EditText
				android:id="@+id/password_logIn"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:inputType="textPassword"
				android:singleLine="true"
				android:text="" />
			<!-- Login button -->
			<CheckBox
				android:id="@+id/btnCheckSaveEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btnCheckSave" />
			<Button
				android:id="@+id/btnLogin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:text="@string/loginString" />
			<!-- Link to Registration Screen -->
			<Button
				android:id="@+id/btnGuestLogin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:text="@string/loginGuestString" />
			<TextView
				android:id="@+id/link_to_register"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="40dip"
				android:layout_marginTop="40dip"
				android:gravity="center"
				android:text="@string/registerDesc"
				android:textColor="#0b84aa"
				android:textSize="20sp" />
		</LinearLayout>
		<!-- Login Form Ends -->
	</RelativeLayout>
</ScrollView>