<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#fff" >
		<!-- Header  Starts -->
		<LinearLayout
			android:id="@+id/header"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/list_gradient_bg"
			android:paddingBottom="5dip"
			android:paddingTop="5dip" >
			<!-- Logo Start -->
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="50dp"				
				android:layout_marginLeft="10dip"
				android:contentDescription="@string/registerString"
				android:src="@drawable/logo_big" />
			<!-- Logo Ends -->
		</LinearLayout>
		<!-- Header Ends -->
		<!-- Footer Start -->
		<LinearLayout
			android:id="@+id/footer"
			android:layout_width="fill_parent"
			android:layout_height="90dip"
			android:layout_alignParentBottom="true"
			android:background="@drawable/footer_repeat"
			android:orientation="vertical" >
		</LinearLayout>
		<!-- Footer Ends -->
		<!-- Registration Form -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/header"
			android:orientation="vertical"
			android:padding="10dip" >
			<!-- Full Name Label -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/nameString"
				android:textColor="#372c24" />
			<EditText
				android:id="@+id/reg_fullname"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
				android:layout_marginTop="5dip"
				android:inputType="textPersonName"
				android:minLines="2"
				android:singleLine="true" />
			<!-- Email Label -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/Email"
				android:textColor="#372c24" />
			<EditText
				android:id="@+id/reg_email"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
				android:layout_marginTop="5dip"
				android:inputType="textEmailAddress"
				android:minLines="2"
				android:singleLine="true" />
			<!-- Password Label -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/passwordString"
				android:textColor="#372c24" />
			<EditText
				android:id="@+id/reg_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:inputType="textPassword"
				android:minLines="2"
				android:singleLine="true" />
			<!-- Register Button -->
			<Button
				android:id="@+id/btnRegister"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:text="@string/registerButtonString" />
			<!-- Link to Login Screen -->
			<TextView
				android:id="@+id/link_to_login"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="40dip"
				android:layout_marginTop="40dip"
				android:gravity="center"
				android:text="@string/loginButtonString"
				android:textColor="#025f7c"
				android:textSize="20sp" />
		</LinearLayout>
		<!-- Registration Form Ends -->
	</RelativeLayout>
</ScrollView>